fixed content spacing

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -431,6 +431,15 @@
   opacity: 1;
 }
 
+.projectPageBodyTextAdjusted {
+  text-align: left;
+  font: normal normal normal 16px/25px Public Sans;
+  letter-spacing: 0px;
+  color: #171717;
+  opacity: 1;
+  max-width: 449px;
+}
+
 .appPageDownloadButton {
   display: flex;
   justify-content: center;
